--- a/login.html
+++ b/login.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=s, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=s, initial-scale=1.0" />
     <title>Log In - Best Logic</title>
-    <link rel="stylesheet" href="./css/style-login.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-    <link href="https://fonts.googleapis.com/css2?family=Glory:wght@300&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="./css/style-login.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Glory:wght@300&display=swap" rel="stylesheet" />
 </head>
+
 <body>
+    <div class="main-container">
         <!-- Apartado para diseño del header -->
-    <div class="container-grid">
-        <header>
-            <h1>Bienvenido A Best Logic</h1>
-        </header>
-    </div>
+        <div class="container-header-flex">
+            <header>
+                <h1>Bienvenido A Best Logic</h1>
+            </header>
+        </div>
+
         <!-- Apartado para diseño del formulario -->
-    <div class="container-flex">
-        <input type="text" required/>
-        <input type="pass" required/>
-        <input type="submit" value="Log In"/>
+        <div class="container-form-flex" >
+            <form>
+                <input type="text" required class="form-flex__input" id="form-flex__input" />
+                <input type="pass" required class="form-flex__input" id="form-flex__input" />
+                <br>
+                <input type="submit" value="Log In" class="form-flex__submit" id="form-flex__submit"/>
+            </form>
+        </div>
     </div>
-        <!-- Apartado para diseño del footer -->
 </body>
+
 </html>
