--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
                 <h1>Bienvenido A Best Logic</h1>
             </header>
         </div>
-
+Hola
         <!-- Apartado para diseño del formulario -->
         <div class="container-form-flex" >
             <form>
