--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=s, initial-scale=1.0" />
     <title>Log In - Best Logic</title>
     <link rel="stylesheet" href="./css/style-login.css" />
+    <link rel="stylesheet" href="/css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Glory:wght@300&display=swap" rel="stylesheet" />
