Diseño del nav en mobile first resolucion 0px hasta 350px realizado

--- a/login.html
+++ b/login.html
@@ -7,30 +7,22 @@
     <meta name="viewport" content="width=s, initial-scale=1.0" />
     <title>Log In - Best Logic</title>
     <link rel="stylesheet" href="./css/style-login.css" />
-    <link rel="stylesheet" href="/css/normalize.css">
+    <!-- <link rel="stylesheet" href="/css/normalize.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Glory:wght@300&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/8c17bd8281.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="main-container">
-        <!-- Apartado para diseño del header -->
-        <div class="container-header-flex">
-            <header>
-                <h1>Bienvenido A Best Logic</h1>
-            </header>
-        </div>
-        <!-- Apartado para diseño del formulario -->
-        <div class="container-form-flex">
-            <form>
-                <input type="text" required class="form-flex__input" id="form-flex__input" />
-                <input type="pass" required class="form-flex__input" id="form-flex__input" />
-                <br>
-                <input type="submit" value="Log In" class="form-flex__submit" id="form-flex__submit" />
-            </form>
-        </div>
-    </div>
+<div class="container-flex-nav">
+    <div class="flex-items logo"><i class="fas fa-brain"></i></div>
+    <div class="flex-items name"><h1>Best Logic</h1></div>
+    <div class="flex-items menu"><i class="fas fa-bars amarillo"></i></div>
+</div>
+
+
 </body>
 
 </html>
